@@ -250,13 +250,14 @@ class _cominterface_meta(type):
                 return name.lower() in self.__map_case__
             return hasattr(self, name)
 
-        class _(partial.partial, self):
-            # XXX These special methods should be generated by the code generator.
-            if has_name("Count"):
+        # XXX These special methods should be generated by the code generator.
+        if has_name("Count"):
+            class _(partial.partial, self):
                 def __len__(self):
                     return self.Count
 
-            if has_name("Item"):
+        if has_name("Item"):
+            class _(partial.partial, self):
                 # 'Item' is the 'default' value.  Make it available by
                 # calling the instance (Not sure this makes sense, but
                 # win32com does this also).
@@ -280,7 +281,8 @@ class _cominterface_meta(type):
                     # Hm, should we call __ctypes_from_outparam__ on the result?
                     return result
 
-            if has_name("_NewEnum"):
+        if has_name("_NewEnum"):
+            class _(partial.partial, self):
                 def __iter__(self):
                     # This method returns a pointer to _some_ _NewEnum interface.
                     # It relies on the fact that the code generator creates next()
